--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -5,7 +5,7 @@ theme: spacelab
 execute:
   freeze: auto
 date: last-modified  
-margin-header: "⚠️ *Draft release.*"
+margin-header: "⚠️ *Draft in progress: converting content from previous documentation.*\n\nBuilt with package version `0.3.4`"
 format:
   html: 
     toc: true
@@ -27,6 +27,7 @@ website:
         file: guides/index.qmd           
       - text: "Reference"
         file: reference/index.qmd  
+      
     right:   
       - icon: github
         href: https://github.com/neelsmith/BiblicalHebrew.jl
@@ -44,7 +45,7 @@ website:
       contents: 
         - tutorials/index.qmd
         - tutorials/quickstart.qmd
-        
+
 
     - title: "Guides"
       contents:
@@ -53,6 +54,10 @@ website:
     - title: "Reference"
       contents: 
         - reference/index.qmd
+        - text: "---"
+        - reference/niqqud.qmd
+        - reference/more_ortho.qmd
+        - reference/syllabification.qmd
 
     - title: "Concepts"
       contents: 
