--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -44,6 +44,7 @@ website:
     - title: "Tutorials"
       contents: 
         - tutorials/index.qmd
+        - text: "---"
         - tutorials/quickstart.qmd
 
 
